--- a/12187127_11887370_12406120_hw1.ipynb
+++ b/12187127_11887370_12406120_hw1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 251,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1541,12 +1541,12 @@
     "            # update the score\n",
     "            score[tup[0]] += float(tup[1])\n",
     "\n",
-    "    return sorted(score.items(), key=lambda s: s[1], reverse=True)"
+    "    return sorted(score.items(), key=lambda s: s[1], reverse=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 54,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1748,12 +1748,22 @@
     "        Output: A dictionary with {token: document frequency (int)}\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "    \n",
+    "    df = defaultdict(int)\n",
+    "    \n",
+    "    for document in documents:\n",
+    "        for word in set(document):\n",
+    "            if word not in df:\n",
+    "                df[word] = 1\n",
+    "            else:\n",
+    "                df[word] += 1\n",
+    "                \n",
+    "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1787,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1803,7 +1813,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "597\n",
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "#### Function check\n",
     "\n",
@@ -1845,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 253,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1876,13 +1895,39 @@
     "    processed_query = preprocess_query(query, index_set)\n",
     "    \n",
     "    N = len(docs)\n",
+    "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    \n",
+    "    def tf_idf(tf, df, N):\n",
+    "        \"\"\"\n",
+    "            Returns a list with doc_ids and tf-idfs per word as a tuple\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            tf_idf = [(tup[0], np.log(1 + tup[1]) * np.log(N/df)) for tup in tf[0]]\n",
+    "        except:\n",
+    "            # the function cannot handle empty lists\n",
+    "            tf_idf = []\n",
+    "\n",
+    "        return tf_idf\n",
+    " \n",
+    "    # a list with lists containing tuples\n",
+    "    score_temp = [tf_idf(index[word], df[word], N) for word in processed_query]\n",
+    "  \n",
+    "    # ensure that the final list is N long\n",
+    "    score = {doc[0]:float(0) for doc in docs}\n",
+    "    \n",
+    "    for tup_list in score_temp:\n",
+    "        for tup in tup_list:\n",
+    "            if tup[0] in score:\n",
+    "                # this is basically the sum part for the score\n",
+    "                score[tup[0]] += tup[1]\n",
+    "    \n",
+    "    return sorted(score.items(), key=lambda s: s[1], reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 254,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1913,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 255,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1929,7 +1974,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TFIDF Results:\n",
+      "Rank 0(1.3e+01): PEEKABIT, Computer Offspring of Punched\\nCard PEEK...\n",
+      "Rank 1(9.8): Variable Length Tree Structures Having Minimum Ave...\n",
+      "Rank 2(8.2): A Stochastic Approach to the Grammatical Coding of...\n",
+      "Rank 3(8.1): Full Table Quadratic Searching for Scatter Storage...\n",
+      "Rank 4(7.6): Use of Tree Structures for Processing Files\\nIn da...\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "test_tfidf_2 = tfidf_search(\"computer word search\", index_set=2)[:5]\n",
@@ -1939,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 256,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1955,7 +2013,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TFIDF Results:\n",
+      "Rank 0(9.4): Variable Length Tree Structures Having Minimum Ave...\n",
+      "Rank 1(7.4): On the Feasibility of Voice Input to\\nan On-line C...\n",
+      "Rank 2(7.3): Median Split Trees: A Fast Lookup Technique for Fr...\n",
+      "Rank 3(7.0): Execution Time Requirements for Encipherment Progr...\n",
+      "Rank 4(7.0): Storage and Search Properties of a Tree-Organized ...\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "test_tfidf_1 = tfidf_search(\"computer word search\", index_set=1)[:5]\n",
@@ -1965,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 257,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1981,7 +2052,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "top-5 docs for index1 with BOW search: ('1771', '1936', '1543', '2535', '678')\n",
+      "top-5 docs for index2 with BOW search: ('1525', '1936', '1844', '1700', '1366')\n",
+      "top-5 docs for index1 with TF-IDF search: ('1936', '2054', '3041', '2620', '944')\n",
+      "top-5 docs for index2 with TF-IDF search: ('1700', '1936', '1235', '2018', '849')\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "print('top-5 docs for index1 with BOW search:', list(zip(*test_bow_1[:5]))[0])\n",
@@ -2494,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 258,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2517,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 259,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2540,7 +2622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 260,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2563,7 +2645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 261,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2611,7 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2667,9 +2749,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bm25_search' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/8j/spbh1w7x0h3d1rygg8y69dbm0000gn/T/ipykernel_71710/2027238185.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# and return a sorted list of (doc_id, score)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# with the most relevant document in the first position\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0msearch_fn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbm25_search\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mindex_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bm25_search' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Set this to the function you want to test!\n",
     "# this function should take in a query (string)\n",
