--- a/12187127_11887370_12406120_hw1.ipynb
+++ b/12187127_11887370_12406120_hw1.ipynb
@@ -1752,6 +1752,7 @@
     "    df = defaultdict(int)\n",
     "    \n",
     "    for document in documents:\n",
+    "        # deal with duplicates\n",
     "        for word in set(document):\n",
     "            if word not in df:\n",
     "                df[word] = 1\n",
@@ -1910,7 +1911,7 @@
     "\n",
     "        return tf_idf\n",
     " \n",
-    "    # a list with lists containing tuples\n",
+    "    # a list with lists containing tuples (doc_id, tf_idf)\n",
     "    score_temp = [tf_idf(index[word], df[word], N) for word in processed_query]\n",
     "  \n",
     "    # ensure that the final list is N long\n",
